# SEMVAR

./: .gitignore  Dockerfile  LICENSE  README.md  SEMVAR.py  docker-entrypoint.sh  environment.yml  example_run.sh  pyproject.toml  requirements.txt  semvar.py  semvar_checkfile.txt
data/: TF_to_SEM_map.txt  motif_name_map.txt  refseq_chr_map.txt
data/SEMs/: AP2B_HUMAN.SK-N-SH.sem  ARNT_HUMAN.GM12878.sem  ATF1_HUMAN.K562.sem  ATF2_HUMAN.HepG2.sem  ATF3_HUMAN.HepG2.sem  ATF4_HUMAN.HepG2.sem  ATF6A_HUMAN.HepG2.sem  BACH1_HUMAN.H1.sem  BACH2_HUMAN.SK-N-SH.sem  BATF_HUMAN.GM12878.sem  BC11A_HUMAN.GM12878.sem  BCL6_HUMAN.HepG2.sem  BHA15_HUMAN.HepG2.sem  BHE40_HUMAN.GM12878.sem  BMAL1_HUMAN.HepG2.sem  CEBPA_HUMAN.HepG2.sem  CEBPB_HUMAN.K562.sem  CEBPD_HUMAN.HepG2.sem  CEBPG_HUMAN.HepG2.sem  CLOCK_HUMAN.K562.sem  COE1_HUMAN.GM12878.sem  COT1_HUMAN.GM12878.sem  COT2_HUMAN.MCF-7.sem  CREB1_HUMAN.GM12878.sem  CREB3L1_3.sem  CREM_HUMAN.K562.sem  CUX1_HUMAN.K562.sem  DBP_HUMAN.HepG2.sem  E2F1_HUMAN.MCF-7.sem  E2F2_HUMAN.HepG2.sem  E2F3_HUMAN.K562.sem  E2F4_HUMAN.HepG2.sem  E2F5_HUMAN.HepG2.sem  E2F6_HUMAN.K562.sem  E2F7_HUMAN.K562.sem  ELF1_HUMAN.HepG2.sem  ELF2_HUMAN.K562.sem  ELF3_HUMAN.HepG2.sem  ELF4_1.2.sem  ELK1_HUMAN.GM12878.sem  (+207 more)
example/variant_list/: example_SNVs.tsv  example_SNVs.vcf
semvar/: io.py  kmers.py  scoring.py  semio.py  semvar.py  seq.py  utils.py
src/semvar/: constants.py
tests/: test_scoring.py  test_semio.py  test_seq.py  test_utils.py
tests/test_data/: baselines.txt
tests/test_data/test_SEMs/: BHLHB2_GM12878.sem  CREB3L1_2.sem  dummy.sem  (+2 more)
